# PwsL

./: .gitignore  README.md  functionBase.c
LAB1/getopt/: main  main.c
LAB2/01/: function.c  function.h  main  main.c  makefile  test.txt
LAB2/02/: func  func.c  func.h  input.txt  main  main.c  output.txt
LAB3/plon/: main  main.c
LAB3/puste_pole/: lol  main  main.c  test2
LAB3/rozrost/: bad.c  main  main.c
LAB3/zad1/: CMakeLists.txt  main.c
LAB3/zasiew/: main  main.c  test
LAB4/: main.c
LAB5/: CMakeLists.txt  poszukiwacz.c  urzad.c
LAB6/active_loop/: debug.c  main.c
LAB7/: CMakeLists.txt  cw1_p1_v1.c  cw1_p2_v1.c  cw2_p1_v2.c  cw2_p2_v2.c  cw2_p3_v1.c  kill.c  script.sh
LAB8/: CMakeLists.txt  main.c  makefile  utils.c  utils.h
cw1/: main.c
producent-consumer/: CMakeLists.txt  main.c  utils.c  utils.h
zal/: CMakeLists.txt
zal/debug/: main.c
zal/info_rejestrator/: main.c  makefile
zal/monochord/: main.c  makefile  utils.c  utils.h
zal/rejestrator/: main.c  makefile  readme.txt  rejestrator.c  sender.c  utils.c  utils.h
